@@ -1,4 +1,7 @@
 2009-07-18
+	* Update MPD elapsed/progress when stopped
+
+2009-07-18
 	* add compilation switch --enable-xoap to be able to use
 	www.weather.com as a source of weather data (this avoids adding
 	libxml2 as a required dependency for users that wish to use noaa
